# ctad

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh  start.sh
src/: main.cpp
src/include/: task_program.hpp
tools/docker/: compose.yml
tools/docker/core/: Dockerfile
tools/docker/dev/: Dockerfile
tools/shells/: build_docker_image.sh  check_docker.sh  compile.sh  destroy_docker_image.sh  gen_cmake.sh  init_variables.sh  make_package.sh  run.sh  test.sh
